# SpaceFighter

./: .gitignore  CMakeLists.txt  README.md
headers/: Animation.h  Atlas.h  AudioManager.h  Background.h  Bullet.h  BulletEnemy.h  BulletPlayer.h  Camera.h  Charactor.h  CollisionBox.h  CollisionManager.h  DropItem.h  Enemy.h  Entity.h  EntityManager.h  EnumCollisionLayer.h  Game.h  PlaneVector.h  Player.h  ResourceManager.h  Scene.h  SceneEnd.h  SceneGaming.h  SceneManager.h  SceneMenu.h  Timer.h
resources/ico/: my_icon.rc
save/: ranking_list.json
src/: Animation.cpp  Atlas.cpp  AudioManager.cpp  Background.cpp  Bullet.cpp  BulletEnemy.cpp  BulletPlayer.cpp  Camera.cpp  CollisionBox.cpp  CollisionManager.cpp  DropItem.cpp  Enemy.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Player.cpp  ResourceManager.cpp  SceneEnd.cpp  SceneGaming.cpp  SceneManager.cpp  SceneMenu.cpp  Timer.cpp  main.cpp
